--- a/backend/wp-content/themes/rschip/src/components/performance/performance.mixin.pug
+++ b/backend/wp-content/themes/rschip/src/components/performance/performance.mixin.pug
@@ -15,15 +15,18 @@ mixin performance(props)
                             div.stock Stock
                             div.carName Porsche 911 Carrera
                         .performanceTableItemTd 
-                            div
+                            div.title Power
+                            div.number
                                 span.hp 385 
                                 | HP
                         .performanceTableItemTd 
-                            div 
+                            div.title Torque
+                            div.number 
                                 span.nm 450 
                                 | NM
                         .performanceTableItemTd 
-                            div 
+                            div.title 0-60 mph
+                            div.number
                                 span.sec 4.2 
                                 | sec
                     .performanceTableItem.withRs
@@ -31,15 +34,18 @@ mixin performance(props)
                             div.stock With RS
                             div.carName Porsche 911 Carrera
                         .performanceTableItemTd 
-                            div 
+                            div.title Power
+                            div.number 
                                 span.hp 410* 
                                 | HP
                         .performanceTableItemTd 
-                            div 
+                            div.title Torque
+                            div.number 
                                 span.nm 475* 
                                 | NM
                         .performanceTableItemTd 
-                            div 
+                            div.title 0-60 mph
+                            div.number
                                 span.sec -0.39* 
                                 | sec
             .performanceImg
