--- a/backend/wp-content/themes/rschip/src/components/chat/chat.component.sass
+++ b/backend/wp-content/themes/rschip/src/components/chat/chat.component.sass
@@ -2,8 +2,10 @@
 .chat
     // display: none
     position: fixed
-    right: 60px
-    bottom: 60px
+    // right: 60px
+    // bottom: 60px
+    right: 20px
+    bottom: 40px
     z-index: 100
 
 .btnChat
@@ -18,7 +20,8 @@
     justify-content: center
     position: fixed
    
-    bottom: 80px
+    // bottom: 80px
+    bottom: 25px
     transition: all 0.5s ease
     
     right: 10px
