--- a/backend/wp-content/themes/rschip/src/components/productSlider/productSlider.component.sass
+++ b/backend/wp-content/themes/rschip/src/components/productSlider/productSlider.component.sass
@@ -51,6 +51,7 @@
     &__App 
         display: inline-flex
         vertical-align: middle
+        padding-top: 30px
         a
             margin: 0 10px
     &__cost
@@ -135,6 +136,7 @@
     display: flex
     align-items: center
     padding: 14px 0
+    width: 100%
     +sm-block
         width: 50%
     p
